Update the logic of getting Min and Max.